--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
-    "builds": [
-        {
-        "src": "./main.py",
-        "use": "@vercel/python"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "./main.py"
-        }
-    ]
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.12"
+    }
+  },
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.py"
+    }
+  ]
 }
