--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ fastapi==0.118.0
 starlette==0.48.0
 pydantic==2.11.9
 requests==2.32.3
-typing_extensions==4.15.0
+SQLAlchemy==2.0.43
+psycopg2-binary==2.9.10
 anyio==4.11.0
 h11==0.16.0
 idna==3.10
+typing_extensions==4.15.0
