--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "functions": {
     "api/index.py": { "runtime": "python3.12" }
-  }
+  },
+  "routes": [
+    { "src": "/(.*)", "dest": "/api/index.py" }
+  ]
 }
