--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,6 @@
     "api/index.py": { "runtime": "python3.12" }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/api/index.py" }
+    { "src": "/(.*)", "dest": "main.py" }
   ]
 }
